2011-12-07  Guillaume Lazzara  <z@lrde.epita.fr>

	* demo/viewer/runner.cc: Make detection of scribo-xml2doc more
	robust.

2014-06-27  Roland Levillain  <roland@lrde.epita.fr>

	Address compiler warnings in Scribo.

	* scribo/debug/logger.hh
	(scribo::debug::internal::logger_::log) [!SCRIBO_NDEBUG]:
	Avoid warnings about unused arguments in non-debug mode.
	* scribo/layout/xy_cut.hh
	(scribo::layout::internal::compute_hist_info_h)
	(scribo::layout::internal::compute_hist_info_v):
	Use `def::coord' instead of `int' as coordinate type, to avoid
	comparisons between signed and unsigned values.
	* src/misc/rectangularity.cc (main)
	* tests/binarization/global_threshold.cc (main)
	* tests/layout/xy_cut.cc (main):
	Avoid warnings about unused arguments.
	* tests/core/object_groups.cc (main): Likewise.
	Use `unsigned' instead of `int' as count/id type, to avoid
	comparisons between signed and unsigned values.

2014-06-26  Roland Levillain  <roland@lrde.epita.fr>

	Make Scribo more compatible with BSD Make.

	* doc/Makefile.am: Do not use `$<' outside suffix rules.
	* Makefile.am,
	* tests/unit_test/Makefile.am:
	Adjust comments.

2014-06-25  Roland Levillain  <roland@lrde.epita.fr>

	Convert Scribo to UTF-8.

	* doc/mainpage.dox: Here.
	* scribo/preprocessing/rotate_90.hh:
	Replace extended characters to convert to plain ASCII.
	Typos.
	* doc/Doxyfile.in (INPUT_ENCODING): Set to UTF-8.

2013-04-18  Guillaume Lazzara  <z@lrde.epita.fr>

	* demo/xml2doc/main.cc: Add --template-path option.

2014-06-20  Roland Levillain  <roland@lrde.epita.fr>

	Remove useless parts from the Scribo documentation machinery.

	* doc/doxyfuns.sty,
	* doc/examples-outputs.mk,
	* doc/examples.mk,
	* doc/examples/dummy.cc,
	* doc/figures.mk,
	* doc/gen-examples-outputs-mk,
	* doc/gen-figures-mk,
	* doc/gen-make-variable,
	* doc/gen-split-examples-mk,
	* doc/gen-split-outputs-mk,
	* doc/graphicx.hva,
	* doc/outputs.mk,
	* doc/outputs/dummy.txt,
	* doc/programs-examples.mk,
	* doc/scribo.sty,